--- a/audioRecorder/res/values/strings.xml
+++ b/audioRecorder/res/values/strings.xml
@@ -3,11 +3,16 @@
 
     <string name="app_name">audioRecorder</string>
     <string name="hello_world">Hello world!</string>
+	
     <string name="action_settings">Settings</string>
-
     <string name="action_add">Добавить</string>
+	<string name="action_list_edit">Редактировать</string>
+	
 	<string name="action_load_text">Загрузить текст</string>
     <string name="dialog_save_audio">Сохранить запись</string>
 	<string name="dialog_save_audio_name">Название записи</string>
+	
+	<string name="new_record">Новая запись</string>
+	<string name="text_not_loaded">Текст не загружен</string>
 	
 </resources>
