--- a/audioRecorder/res/values/strings.xml
+++ b/audioRecorder/res/values/strings.xml
@@ -7,7 +7,8 @@
     <string name="action_settings">Settings</string>
     <string name="action_add">Добавить</string>
 	<string name="action_list_edit">Редактировать</string>
-	
+	<string name="action_delete">Удалить</string>
+		
 	<string name="action_load_text">Загрузить текст</string>
     <string name="dialog_save_audio">Сохранить запись</string>
 	<string name="dialog_save_audio_name">Название записи</string>
