--- a/audioRecorder/res/values/strings.xml
+++ b/audioRecorder/res/values/strings.xml
@@ -12,7 +12,7 @@
 		
 	<string name="action_load_text">Загрузить текст</string>
     <string name="dialog_save_audio">Сохранить запись</string>
-	<string name="dialog_save_audio_name">Название записи:</string>
+	<string name="dialog_save_audio_name">Имя:</string>
 	<string name="dialog_save_text_name">Текст:</string>
 	<string name="dialog_save_date">Дата:</string>
 	<string name="dialog_save_duration">Длительность:</string>
@@ -25,10 +25,11 @@
 	<string name="yes">Да</string>
 	<string name="cancel">Отмена</string>
 	<string name="create">Создать метку</string>
-	<string name="select">Выбрать метку</string>
+	<string name="select">Из списка</string>
 	<string name="close">Закрыть</string>
 	<string name="delete">Удалить</string>
-					
+	<string name="newtag">Новая</string>
+						
 	<string name="new_record">Новая запись</string>
 	<string name="text_not_loaded">Текст не загружен</string>
 	
